# attension-keiba

./: .gitignore  Makefile  README.md  prompt.txt  pyproject.toml
conf/: backtest.yaml  data.yaml  model.yaml  train.yaml
notebooks/: 01_eda.ipynb  02_feature_checks.ipynb
scripts/: __init__.py  generate_dummy_data.py
src/: __init__.py  cli.py  config.py
src/api/: serve.py
src/backtest/: analytics.py  bankroll.py  engine.py  kelly.py
src/infer/: predictor.py
src/train/: cv.py  dataset.py  metrics.py  trainer.py  workflow.py
src/viz/: attention_plot.py  calibration_plot.py  equity_plot.py
tests/: conftest.py  test_netkeiba_fetcher.py  test_workflow.py
